--- a/client/res/values/strings.xml
+++ b/client/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="hello">Hello World, ClientActivity!</string>
+    <string name="hello">Hello World, from Axis &amp; Androids!</string>
     <string name="app_name">Client</string>
 
 </resources>
