--- a/client/res/values/strings.xml
+++ b/client/res/values/strings.xml
@@ -3,8 +3,8 @@
 
     <string name="hello">Hello World, from Axis &amp; Androids!</string>
     <string name="app_name">Client</string>
-    <string name="host">Host</string>
-    <string name="port">Port</string>
+    <string name="host">10.0.2.2</string>
+    <string name="port">6000</string>
     <string name="disconnect">Disconnect</string>
     <string name="connect">Connect</string>
     <string name="show_connections">Connections</string>
