--- a/reference_manual/AxisAndAndroids_ReferenceManual.tex
+++ b/reference_manual/AxisAndAndroids_ReferenceManual.tex
@@ -7,7 +7,7 @@
 
 \title{EDA040 Camera Project [Axis \& Androids]} 
 \begin{Large}
-\author{Jakob Grundström, pi07jg8 \\Bengt Ericsson, dt08be9 \\Carl Bjerggaard (vv06cb3) \\Magnus Törnqvist, dt08mtX}
+\author{Jakob Grundström, pi07jg8 \\Bengt Ericsson, dt08be9 \\Carl Bjerggaard, vv06cb3 \\Magnus Törnqvist, dt08mtX}
 \end{Large}
 
 \begin{document}
